Thu Mar 16 19:47:16 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Slightly cleaner --list stuff...

Thu Mar 16 17:46:39 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -l, --list mode. Doesn't display images, just analyses
	them a little and spits out an 'ls' style listing with some basic
	info. Useful in scripts. I intend to extend this somewhat soon.

Thu Mar 16 16:40:19 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -q, --quiet option. Stops non-fatal image load errors
	being reported. Useful when you want to do feh * on a directory
	with some images, some other stuff. You'll only see what imlib2
	can load.

Wed Mar 15 21:32:48 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed bug using the short versions of --limit-width and
	--limit-height

Wed Mar 15 21:17:26 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Better still. Font size increases in fullscreen mode, but -d
	works in windowed modes too now.

Wed Mar 15 20:58:50 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Hrm. Much better.

Wed Mar 15 20:36:54 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added -d, --draw_filename for use with fullscreen mode. It
	sticks the filename up in the top left. Needs some more work yet.

Sat Mar 11 23:35:20 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Added proper commandline option parsing courtesy of getopt_long
	:) Obviously not everyone has this, so I include it myself. Now
	you can combine args in nice ways: "feh -kR20 http://some.webcam"
	* It passes "make test" okay, but I reserve the right to have
	broken something =) Let me know?

Sat Mar 11 01:34:36 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* 0.6.4 released

Tue Mar  7 23:07:40 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* Fixed evil segv due to uninitialised gc.

Sat Mar  4 16:33:29 2000  Tom Gilbert  <gilbertt@btinternet.com>

	* --help output for the new options.
	* Added --booth, with is a shortcut for a fullscreen slideshow
	with an auto-change every 20 seconds...
