@@ -21,16 +21,18 @@
 #include "feh.h"
 #include "list.h"
 
-static feh_file_info info_list = NULL;
+static feh_file_info *info_list = NULL;
 extern int errno;
 
+static int feh_cmp_name (feh_file_info * info1, feh_file_info * info2);
+static int feh_cmp_filename (feh_file_info * info1, feh_file_info * info2);
 
 void
 init_list_mode (void)
 {
   feh_file file;
-  feh_file_info info;
-  int i = 0;
+  feh_file_info *info;
+  int i = 0, j = 0;
 
   D (("In init_list_mode\n"));
 
@@ -58,24 +60,40 @@ init_list_mode (void)
   if (opt.verbose)
     fprintf (stdout, "\n");
 
-  printf ("WIDTH\tHEIGHT\tPIXELS\tSIZE(bytes)\tALPHA\tNAME\n");
+  /* By default sort by filename/name */
+  if(opt.longlist)
+	info_list = feh_list_sort (info_list, feh_cmp_filename);
+  else
+	info_list = feh_list_sort (info_list, feh_cmp_name);
+
+  if (opt.longlist)
+    printf
+      ("NUM\tFORMAT\tWIDTH\tHEIGHT\tPIXELS\tSIZE(bytes)\tALPHA\tFILENAME\n");
+  else
+    printf ("NUM\tFORMAT\tWIDTH\tHEIGHT\tSIZE(bytes)\tALPHA\tNAME\n");
   for (info = info_list; info; info = info->next)
     {
-	printf ("%d\t%d\t%d\t%d\t\t%c\t%s\n", info->width, info->height, info->pixels,
-	       	info->size, info->has_alpha ? 'X' : ' ', info->name);
+      if (opt.longlist)
+	printf ("%d\t%s\t%d\t%d\t%d\t%d\t\t%c\t%s\n", ++j, info->format,
+		info->width, info->height, info->pixels, info->size,
+		info->has_alpha ? 'X' : '-', info->filename);
+      else
+	printf ("%d\t%s\t%d\t%d\t%d\t\t%c\t%s\n", ++j, info->format,
+		info->width, info->height, info->size,
+		info->has_alpha ? 'X' : '-', info->name);
     }
 
   exit (0);
 }
 
-feh_file_info
+feh_file_info *
 feh_fileinfo_create (feh_file file)
 {
-  feh_file_info newinfo;
+  feh_file_info *newinfo;
   Imlib_Image *im = NULL;
   struct stat st;
 
-  D (("In fileinfo_create\n"));
+  D (("In feh_fileinfo_create\n"));
 
   errno = 0;
   if (stat (file->filename, &st))
@@ -110,7 +128,7 @@ feh_fileinfo_create (feh_file file)
   if (feh_load_image (&im, file))
     {
       imlib_context_set_image (im);
-      newinfo = (feh_file_info) emalloc (sizeof (_feh_file_info));
+      newinfo = (feh_file_info *) emalloc (sizeof (feh_file_info));
 
       newinfo->filename = estrdup (file->filename);
       newinfo->name = estrdup (file->name);
@@ -122,10 +140,12 @@ feh_fileinfo_create (feh_file file)
 
       newinfo->pixels = newinfo->width * newinfo->height;
 
+      newinfo->format = estrdup (imlib_image_format ());
+
       imlib_free_image_and_decache ();
 
       newinfo->size = st.st_size;
-	      
+
       newinfo->next = NULL;
       newinfo->prev = NULL;
       return newinfo;
@@ -134,7 +154,7 @@ feh_fileinfo_create (feh_file file)
 }
 
 void
-feh_fileinfo_free (feh_file_info info)
+feh_fileinfo_free (feh_file_info * info)
 {
   D (("In feh_fileinfo_free\n"));
   if (!info)
@@ -146,8 +166,8 @@ feh_fileinfo_free (feh_file_info info)
   free (info);
 }
 
-feh_file_info
-feh_fileinfo_addtofront (feh_file_info root, feh_file_info newinfo)
+feh_file_info *
+feh_fileinfo_addtofront (feh_file_info * root, feh_file_info * newinfo)
 {
   D (("In feh_fileinfo_addtofront\n"));
   if (!newinfo)
@@ -160,7 +180,7 @@ feh_fileinfo_addtofront (feh_file_info root, feh_file_info newinfo)
 }
 
 int
-feh_fileinfo_length (feh_file_info info)
+feh_fileinfo_length (feh_file_info * info)
 {
   int length;
   D (("In feh_fileinfo_length\n"));
@@ -174,7 +194,8 @@ feh_fileinfo_length (feh_file_info info)
   return length;
 }
 
-feh_file_info feh_fileinfo_last (feh_file_info info)
+feh_file_info *
+feh_fileinfo_last (feh_file_info * info)
 {
   D (("In feh_fileinfo_last\n"));
   if (info)
@@ -185,7 +206,8 @@ feh_file_info feh_fileinfo_last (feh_file_info info)
   return info;
 }
 
-feh_file_info feh_fileinfo_first (feh_file_info info)
+feh_file_info *
+feh_fileinfo_first (feh_file_info * info)
 {
   D (("In feh_fileinfo_first\n"));
   if (info)
@@ -196,11 +218,13 @@ feh_file_info feh_fileinfo_first (feh_file_info info)
   return info;
 }
 
-feh_file_info
-feh_filelinfo_reverse (feh_file_info list)
+feh_file_info *
+feh_filelinfo_reverse (feh_file_info * list)
 {
-  feh_file_info last;
+  feh_file_info *last;
 
+  D(("In feh_filelinfo_reverse\n"));
+  
   last = NULL;
   while (list)
     {
@@ -213,8 +237,8 @@ feh_filelinfo_reverse (feh_file_info list)
   return last;
 }
 
-feh_file_info
-feh_fileinfo_remove_info (feh_file_info list, feh_file_info info)
+feh_file_info *
+feh_fileinfo_remove_info (feh_file_info * list, feh_file_info * info)
 {
   D (("In feh_fileinfo_remove_info\n"));
   if (!info)
@@ -227,4 +251,83 @@ feh_fileinfo_remove_info (feh_file_info list, feh_file_info info)
     info->next->prev = info->prev;
   feh_fileinfo_free (info);
   return list;
+}
+
+feh_file_info *
+feh_list_sort (feh_file_info * list, feh_compare_fn cmp)
+{
+  feh_file_info *l1, *l2;
+
+  D (("In feh_list_sort\n"));
+
+  if (!list)
+    return NULL;
+  if (!list->next)
+    return list;
+
+  l1 = list;
+  l2 = list->next;
+
+  while ((l2 = l2->next) != NULL)
+    {
+      if ((l2 = l2->next) == NULL)
+	break;
+      l1 = l1->next;
+    }
+  l2 = l1->next;
+  l1->next = NULL;
+
+  return feh_list_sort_merge (feh_list_sort (list, cmp),
+			      feh_list_sort (l2, cmp), cmp);
+}
+
+feh_file_info *
+feh_list_sort_merge (feh_file_info * l1,
+		     feh_file_info * l2, feh_compare_fn cmp)
+{
+  feh_file_info list, *l, *lprev;
+
+  D (("In feh_list_sort_merge\n"));
+
+  l = &list;
+  lprev = NULL;
+
+  while (l1 && l2)
+    {
+      if (cmp (l1, l2) < 0)
+	{
+	  l->next = l1;
+	  l = l->next;
+	  l->prev = lprev;
+	  lprev = l;
+	  l1 = l1->next;
+	}
+      else
+	{
+	  l->next = l2;
+	  l = l->next;
+	  l->prev = lprev;
+	  lprev = l;
+	  l2 = l2->next;
+	}
+    }
+  l->next = l1 ? l1 : l2;
+  l->next->prev = l;
+
+  return list.next;
+}
+
+
+static int
+feh_cmp_filename (feh_file_info * info1, feh_file_info * info2)
+{
+    D(("In feh_cmp_filename\n"));
+  return strcmp (info1->filename, info2->filename);
+}
+
+static int
+feh_cmp_name (feh_file_info * info1, feh_file_info * info2)
+{
+    D(("In feh_cmp_name\n"));
+  return strcmp (info1->name, info2->name);
 }
