@@ -1,3 +1,9 @@
+Fri Mar 17 18:04:03 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Added -L, --longlist to allow for more detailed listings. Lists
+	are sorted by filename now too. (Until I write more sorting
+	options...)
+
 Thu Mar 16 19:47:16 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Slightly cleaner --list stuff...
